appsettings.json is fixed

--- a/src/Lykke.Job.BlockchainCashoutProcessor/appsettings.json
+++ b/src/Lykke.Job.BlockchainCashoutProcessor/appsettings.json
@@ -1,15 +1,36 @@
 ﻿{
   // NOTE: Please, modify this settings only to reflect AppSettings structure.
   // If you want to use local settings, add appsettings.Development.json file, which not version controlled
+  "Assets": {
+    "ServiceUrl": "",
+    "CacheExpirationPeriod": "00:00:00"
+  },
   "BlockchainCashoutProcessorJob": {
     "Db": {
-      "LogsConnString": ""
+      "LogsConnString": "",
+      "DataConnString": ""
+    },
+    "Cqrs": {
+      "RabbitConnectionString": "",
+      "RetryDelay": "00:00:00"
+    },
+    "ChaosKitty": {
+      "StateOfChaos": 0.0
     }
+  },
+  "BlockchainsIntegration": {
+    "Blockchains": [
+      {
+        "Type": "",
+        "HotWalletAddress": ""
+      }
+    ]
   },
   "SlackNotifications": {
     "AzureQueue": {
       "ConnectionString": "",
       "QueueName": ""
-    }
+    },
+    "ThrottlingLimitSeconds": 0
   }
 }
