--- a/contract/Lykke.Job.BlockchainCashoutProcessor.Contract/Lykke.Job.BlockchainCashoutProcessor.Contract.csproj
+++ b/contract/Lykke.Job.BlockchainCashoutProcessor.Contract/Lykke.Job.BlockchainCashoutProcessor.Contract.csproj
@@ -33,7 +33,7 @@
 
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="11.1.0" />
-    <PackageReference Include="protobuf-net" Version="2.3.4" />
+    <PackageReference Include="MessagePack" Version="1.7.3.2" />
   </ItemGroup>
 
 </Project>
