--- a/src/Lykke.Job.BlockchainCashoutProcessor/appsettings.json
+++ b/src/Lykke.Job.BlockchainCashoutProcessor/appsettings.json
@@ -26,6 +26,10 @@
       }
     ]
   },
+  "OperationsRepositoryServiceClient": {
+    "ServiceUrl": "",
+    "RequestTimeout": 0
+  },
   "SlackNotifications": {
     "AzureQueue": {
       "ConnectionString": "",
