--- a/src/Lykke.Job.BlockchainCashoutProcessor/Lykke.Job.BlockchainCashoutProcessor.csproj
+++ b/src/Lykke.Job.BlockchainCashoutProcessor/Lykke.Job.BlockchainCashoutProcessor.csproj
@@ -22,19 +22,20 @@
 
   <ItemGroup>
     <PackageReference Include="Lykke.Common.ApiLibrary" Version="1.3.1" />
-    <PackageReference Include="Lykke.Cqrs" Version="4.0.0" />
-    <PackageReference Include="Lykke.Job.BlockchainOperationsExecutor.Contract" Version="5.0.0" />
+    <PackageReference Include="Lykke.Cqrs" Version="4.1.0" />
+    <PackageReference Include="Lykke.Job.BlockchainOperationsExecutor.Contract" Version="6.0.0" />
     <!-- #if azurequeuesub -->
     <PackageReference Include="Lykke.JobTriggers" Version="1.2.0" />
     <!-- #endif -->
     <PackageReference Include="Lykke.Logs" Version="3.6.0" />
-    <PackageReference Include="Lykke.Messaging.RabbitMq" Version="0.1.15" />
+    <PackageReference Include="Lykke.Messaging" Version="5.0.0" />
+    <PackageReference Include="Lykke.Messaging.RabbitMq" Version="2.0.0" />
     <!-- #if rabbitpub -->
     <PackageReference Include="Lykke.RabbitMq.Azure" Version="4.0.1" />
     <!-- #endif -->
     <!-- #if rabbitpub || rabbitsub -->
     <PackageReference Include="Lykke.Service.Assets.Client" Version="3.3.1" />
-    <PackageReference Include="Lykke.Service.OperationsRepository.Client" Version="1.0.92" />
+    <PackageReference Include="Lykke.Service.OperationsRepository.Client" Version="1.0.94" />
     <!-- #endif -->
     <PackageReference Include="Lykke.SettingsReader" Version="2.1.0" />
     <PackageReference Include="Lykke.SlackNotification.AzureQueue" Version="2.0.1" />
