--- a/src/Lykke.Job.BlockchainCashoutProcessor/Lykke.Job.BlockchainCashoutProcessor.csproj
+++ b/src/Lykke.Job.BlockchainCashoutProcessor/Lykke.Job.BlockchainCashoutProcessor.csproj
@@ -29,12 +29,15 @@
     <!-- #endif -->
     <PackageReference Include="Lykke.Logs" Version="3.6.0" />
     <PackageReference Include="Lykke.Messaging" Version="5.0.0" />
+    <PackageReference Include="Lykke.MatchingEngineConnector" Version="2.1.0" />
     <PackageReference Include="Lykke.Messaging.RabbitMq" Version="2.0.0" />
     <!-- #if rabbitpub -->
     <PackageReference Include="Lykke.RabbitMq.Azure" Version="4.0.1" />
     <!-- #endif -->
     <!-- #if rabbitpub || rabbitsub -->
+    <PackageReference Include="Lykke.RabbitMqBroker" Version="4.3.1" />
     <PackageReference Include="Lykke.Service.Assets.Client" Version="3.3.1" />
+    <PackageReference Include="Lykke.Service.BlockchainWallets.Client" Version="2.0.0" />
     <PackageReference Include="Lykke.Service.OperationsRepository.Client" Version="1.0.94" />
     <!-- #endif -->
     <PackageReference Include="Lykke.SettingsReader" Version="2.1.0" />
