--- a/src/Lykke.Job.BlockchainCashoutProcessor/Lykke.Job.BlockchainCashoutProcessor.csproj
+++ b/src/Lykke.Job.BlockchainCashoutProcessor/Lykke.Job.BlockchainCashoutProcessor.csproj
@@ -5,10 +5,10 @@
     <Version>1.0.1</Version>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <LangVersion>latest</LangVersion>
+    <LangVersion>7.1</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <LangVersion>latest</LangVersion>
+    <LangVersion>7.1</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <None Update="Dockerfile">
@@ -17,7 +17,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Lykke.Common.ApiLibrary" Version="1.3.1" />
-    <PackageReference Include="Lykke.Cqrs" Version="4.5.1" />
+    <PackageReference Include="Lykke.Cqrs" Version="4.6.0" />
     <PackageReference Include="Lykke.Job.BlockchainOperationsExecutor.Contract" Version="6.0.0" />
     <!-- #if azurequeuesub -->
     <!-- #endif -->
