--- a/src/Lykke.Job.BlockchainCashoutProcessor.Core/Lykke.Job.BlockchainCashoutProcessor.Core.csproj
+++ b/src/Lykke.Job.BlockchainCashoutProcessor.Core/Lykke.Job.BlockchainCashoutProcessor.Core.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Lykke.Common" Version="7.0.3" />
+    <PackageReference Include="Lykke.Service.BlockchainApi.Client" Version="17.4.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\contract\Lykke.Job.BlockchainCashoutProcessor.Contract\Lykke.Job.BlockchainCashoutProcessor.Contract.csproj" />
