--- a/src/Lykke.Job.BlockchainCashoutProcessor/Lykke.Job.BlockchainCashoutProcessor.csproj
+++ b/src/Lykke.Job.BlockchainCashoutProcessor/Lykke.Job.BlockchainCashoutProcessor.csproj
@@ -18,10 +18,10 @@
   <ItemGroup>
     <PackageReference Include="Lykke.Common.ApiLibrary" Version="1.10.1" />
     <PackageReference Include="Lykke.Cqrs" Version="5.0.1" />
-    <PackageReference Include="Lykke.Job.BlockchainOperationsExecutor.Contract" Version="10.0.0" />
+    <PackageReference Include="Lykke.Job.BlockchainOperationsExecutor.Contract" Version="11.0.0-beta.1" />
     <!-- #if azurequeuesub -->
     <!-- #endif -->
-    <PackageReference Include="Lykke.Logs" Version="5.2.0" />
+    <PackageReference Include="Lykke.Logs" Version="5.4.0" />
     <PackageReference Include="Lykke.Messaging" Version="6.0.1" />
     <PackageReference Include="Lykke.MatchingEngineConnector" Version="7.4.0" />
     <PackageReference Include="Lykke.Messaging.RabbitMq" Version="2.1.0" />
@@ -30,7 +30,6 @@
     <!-- #if rabbitpub || rabbitsub -->
     <PackageReference Include="Lykke.Service.Assets.Client" Version="4.4.0" />
     <PackageReference Include="Lykke.Service.BlockchainWallets.Client" Version="4.5.2" />
-    <PackageReference Include="Lykke.Service.OperationsRepository.Client" Version="1.0.98" />
     <!-- #endif -->
     <PackageReference Include="Lykke.SettingsReader" Version="4.0.1" />
     <PackageReference Include="Lykke.SlackNotification.AzureQueue" Version="2.0.5" />
