--- a/contract/Lykke.Job.BlockchainCashoutProcessor.Contract/Lykke.Job.BlockchainCashoutProcessor.Contract.csproj
+++ b/contract/Lykke.Job.BlockchainCashoutProcessor.Contract/Lykke.Job.BlockchainCashoutProcessor.Contract.csproj
@@ -34,6 +34,7 @@
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="2018.2.1" />
     <PackageReference Include="MessagePack" Version="1.7.3.4" />
+    <PackageReference Include="protobuf-net" Version="2.4.0" />
   </ItemGroup>
 
 </Project>
