--- a/tests/Lykke.Job.BlockchainCashoutProcessor.Tests/Lykke.Job.BlockchainCashoutProcessor.Tests.csproj
+++ b/tests/Lykke.Job.BlockchainCashoutProcessor.Tests/Lykke.Job.BlockchainCashoutProcessor.Tests.csproj
@@ -7,8 +7,13 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
     <PackageReference Include="Moq" Version="4.10.0" />
-    <PackageReference Include="xunit" Version="2.4.0" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
+    <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\Lykke.Job.BlockchainCashoutProcessor.AzureRepositories\Lykke.Job.BlockchainCashoutProcessor.AzureRepositories.csproj" />
+    <ProjectReference Include="..\..\src\Lykke.Job.BlockchainCashoutProcessor\Lykke.Job.BlockchainCashoutProcessor.csproj" />
   </ItemGroup>
 
   <ItemGroup>
