--- a/src/Lykke.Job.BlockchainCashoutProcessor/Lykke.Job.BlockchainCashoutProcessor.csproj
+++ b/src/Lykke.Job.BlockchainCashoutProcessor/Lykke.Job.BlockchainCashoutProcessor.csproj
@@ -17,14 +17,15 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Lykke.Common.ApiLibrary" Version="1.10.2" />
-    <PackageReference Include="Lykke.Cqrs" Version="7.0.0" />
+    <PackageReference Include="Lykke.Cqrs" Version="8.1.0" />
+    <PackageReference Include="Lykke.Cqrs.MessageCancellation" Version="2.3.1" />
     <PackageReference Include="Lykke.Job.BlockchainOperationsExecutor.Contract" Version="12.0.0" />
     <!-- #if azurequeuesub -->
     <!-- #endif -->
-    <PackageReference Include="Lykke.Logs" Version="7.1.0" />
-    <PackageReference Include="Lykke.Messaging" Version="6.2.0" />
+    <PackageReference Include="Lykke.Logs" Version="7.2.1" />
+    <PackageReference Include="Lykke.Messaging" Version="6.3.0" />
     <PackageReference Include="Lykke.MatchingEngineConnector" Version="8.3.0" />
-    <PackageReference Include="Lykke.Messaging.RabbitMq" Version="2.1.0" />
+    <PackageReference Include="Lykke.Messaging.RabbitMq" Version="2.1.3" />
     <!-- #if rabbitpub -->
     <!-- #endif -->
     <!-- #if rabbitpub || rabbitsub -->
