--- a/src/Lykke.Job.BlockchainCashoutProcessor/Lykke.Job.BlockchainCashoutProcessor.csproj
+++ b/src/Lykke.Job.BlockchainCashoutProcessor/Lykke.Job.BlockchainCashoutProcessor.csproj
@@ -31,6 +31,8 @@
     <!-- #endif -->
     <!-- #if rabbitpub || rabbitsub -->
     <PackageReference Include="Lykke.Service.Assets.Client" Version="4.4.0" />
+    <PackageReference Include="Lykke.Service.BlockchainSettings.Client" Version="1.6.0" />
+    <PackageReference Include="Lykke.Service.BlockchainSettings.Contract" Version="1.4.0" />
     <PackageReference Include="Lykke.Service.BlockchainWallets.Client" Version="5.3.1" />
     <!-- #endif -->
     <PackageReference Include="Lykke.SettingsReader" Version="4.1.1" />
